# EASDIF_SDIF

./: .revision  CMakeLists.txt  ChangeLog  Doxyfile.in  Easdif-debug.pc.in  Easdif.pc.in  INSTALL  Makefile.am  README  README.md  ReleaseNotes  all.install  all.ircam.sh  autogen.sh  configure.in  merge_subversion_changes.sh
SDIF/: .revision  configure
SDIF/sdif/: SdifRWLowLevel.c
SDIF/test/: Makefile.am  cmd_testcheck  test_conv
easdif/: CMakeLists.txt  Makefile.am  easdif.h  easdif_config.hpp.in  easdif_exports.hpp  easdif_version.h  easdif_version.hpp.in  easdifintro.hpp.in  sdif_frame.cpp  sdif_frame.hpp  sdif_matrix.cpp  sdif_matrix.hpp  sdifentity.cpp  sdifentity.hpp  sdifexception.cpp  sdifexception.hpp  sdifinit.cpp  sdifinit.hpp  sdifmatrixdata.hpp  sdifmatrixdatainterface.hpp  sdifnamevaluetable.cpp  sdifnamevaluetable.hpp
matlab/: CMakeLists.txt  Fsdif_access_all_matrix.cpp  Fsdif_read_handler.cpp  Fsdif_read_handler.m  Fsdif_write_handler.cpp  Fsdif_write_handler.m  Fsdifclearall.m  Fsdifclose.m  Fsdifexist.m  Fsdifloadfile.m  Fsdifopen.m  Fsdifread.m  Fsdifrewind.m  Fsdifwrite.m  fieldnames.hpp
swig/: CMakeLists.txt  Makefile.am  README  autogen.sh  configure.in  easdif-common-init.i  easdif-common.i.in  easdif-defines.i  sdif-common.i.in
swig/java/: CMakeLists.txt  Makefile.am  easdif-java.i  main.java  main.java.in  sdiftypemap-java.i
swig/m4/: Makefile.am  ac_jni_include_dirs.m4
swig/perl5/: CMakeLists.txt  Makefile.am  easdif-perl5.i  sdiftypemap-perl5.i  test.pl  test.pl.in
swig/python/: CMakeLists.txt  Makefile.am  easdif-python.i  example.py  sdiftypemap-python.i  setup.py.in  setup2.py.in  test.py  test.py.in
test/: CMakeLists.txt  Makefile.am  New5.sdif  classba.cpp  classbis.cpp  classbiw.cpp  classbiww.cpp  easdifRmNVT.cpp  ent_sel.cpp  ent_sele.cpp  entread.cpp  entttsel.cpp  esclass.cpp  esclasssauv.cpp  matrix.cpp  mrk.sdif  new_sel.cpp  new_try.cpp  new_tutorial.cpp  rent_sel.cpp  send.cpp  testTypes.cpp  tosend.cpp  try_excep.cpp  tryfile.cpp  trytry.cpp  tutmat.cpp  tutname.cpp  tutofini.cpp  tutorini.cpp  typty.cpp  virtual.cpp
