# Swig configuration

MESSAGE(STATUS "-------------------------------------------------")
MESSAGE(STATUS "Configuring SWIG wrappers")
FIND_PACKAGE(SWIG REQUIRED)
IF(SWIG_FOUND)
  MESSAGE(STATUS "using swig installation in ${SWIG_DIR}")
  IF(SWIG_FOUND)
    INCLUDE(UseSWIG)
  ENDIF(SWIG_FOUND)

  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
  INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/SDIF/include)
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/SDIF/include)
  SET(EASDIF_INC_DIR_FOR_SWIG ${CMAKE_CURRENT_SOURCE_DIR}/../)
  SET(SDIF_INC_DIR_FOR_SWIG ${CMAKE_CURRENT_SOURCE_DIR}/../)
  SET(EASDIF_BUILDINC_DIR ${CMAKE_CURRENT_BINARY_DIR}/../)
  SET(SDIF_BUILDINC_DIR ${CMAKE_CURRENT_BINARY_DIR}/../)
  CONFIGURE_FILE(easdif-common.i.in ${CMAKE_CURRENT_BINARY_DIR}/easdif-common.i)
  CONFIGURE_FILE(sdif-common.i.in ${CMAKE_CURRENT_BINARY_DIR}/sdif-common.i)

  ADD_CUSTOM_TARGET(checkswig)

  IF(EASDIF_DO_PYTHON)
    MESSAGE(STATUS "python")
    ADD_SUBDIRECTORY(python)
  ENDIF(EASDIF_DO_PYTHON)
  IF(EASDIF_DO_PERL)
    MESSAGE(STATUS "perl5")
    ADD_SUBDIRECTORY(perl5)
  ENDIF(EASDIF_DO_PERL)
  IF(EASDIF_DO_JAVA)
    MESSAGE(STATUS "java")
    ADD_SUBDIRECTORY(java)
  ENDIF(EASDIF_DO_JAVA)

ENDIF(SWIG_FOUND)
MESSAGE("-------------------------------------------------")


