dnl configure for SDIF and easdif swig

dnl Init file
AC_INIT(sdif-common.i.in)

dnl Package name
PACKAGE_NAME=swig-easdif

dnl Package version
PACKAGE_VERSION=0.0.2

dnl provide host_os variable
AC_CANONICAL_HOST


dnl Init automake
AM_INIT_AUTOMAKE(${PACKAGE_NAME}, ${PACKAGE_VERSION})


dnl TEST os
AC_SUBST(JAVAC)

AC_PROG_LIBTOOL
AM_PATH_PYTHON(2.3)
AC_PROG_SWIG(1.3.31)

SWIG_ENABLE_CXX
SWIG_PYTHON

dnl if test "`uname -s`" = "Darwin" ; then
dnl SWIGLINKFLAGS=-Wl,-bind_at_load -flat_namespace -undefined suppress 
dnl else
dnl SWIGLINKFLAGS=-shared
dnl fi


AC_SUBST(HAVESWIG)
if test -n "$SWIG_LIB" ; then
HAVESWIG=yes;
else
HAVESWIG=no;
fi

AC_SUBST(EASDIF_INC_DIR)
EASDIF_INC_DIR="$PWD/.."


AC_ARG_ENABLE(java,
[  --enable-java          configure java interface],
[echo FEATURE enable-java... $enableval; 
if test "$enableval" = "yes"; then
dnl get java compiler
AC_PROG_JAVAC

dnl get java include directories
dnl AC_JNI_INCLUDE_DIR
fi
],
)

#for JNI_INCLUDE_DIR in $JNI_INCLUDE_DIRS
#do
#JAVA_INCLUDE="$JAVA_INCLUDE -I$JNI_INCLUDE_DIR"
#done

#AC_SUBST(JAVA_INCLUDE)

AM_CONDITIONAL([MAKE_JAVA], [test "$JAVAC"x != x])

AC_OUTPUT(
easdif-common.i
sdif-common.i
Makefile
java/Makefile
perl5/Makefile
python/Makefile
m4/Makefile
)
